infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app-ingress
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
        alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:403983794232:certificate/64cc4da5-2009-40dd-8d3b-e39148d38375
spec:
    ingressClassName: alb
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nginx-svc
                            port:
                                number: 80
                  - path: /user
                    pathType: Prefix
                    backend:
                        service:
                            name: user-service-svc
                            port:
                                number: 80
                  - path: /product
                    pathType: Prefix
                    backend:
                        service:
                            name: product-service-svc
                            port:
                                number: 80
                  - path: /cart
                    pathType: Prefix
                    backend:
                        service:
                            name: cart-service-svc
                            port:
                                number: 80
                  - path: /order
                    pathType: Prefix
                    backend:
                        service:
                            name: order-service-svc
                            port:
                                number: 80
